--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -147,6 +147,16 @@
         app:layout_constraintTop_toBottomOf="@id/addressEditTextSignUpAFrame"
         android:layout_marginBottom="32dp"/>
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toTopOf="@+id/nameTextEditSignUpAFrame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_logo_round" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
   </FrameLayout>
 </layout>
